--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,24 @@
     <header class="intro">
       <img src="http://localhost:9000/img/fun-bus.jpg" alt="kumlar içindeki otobüs">
       <h2>Eğlence Otobüsüne Hoş geldiniz!</h2>
-      <p>Gezici sefer modern, temiz web tasarımı blog yazarı temiz web sitesi teması web sitesi modern. Güzel tasarım tasarla, travelblogger macera WordPress yolculuk tutkusu teması blog yazarı web sitesi keşif teması travelblogger. Macera eğlencesi
+      <p>Gezici sefer modern, temiz web tasarımı blog yazarı temiz web sitesi teması web sitesi modern. Güzel tasarım
+        tasarla, travelblogger macera WordPress yolculuk tutkusu teması blog yazarı web sitesi keşif teması
+        travelblogger. Macera eğlencesi
         gezgin güzel tasarım web sitesi seferi.</p>
     </header>
     <section class="content-section">
+
       <div class="text-content">
+        <div class="form-content">
+          <form class="form">
+            <input type="text" id="fname" name="fname" placeholder="Rotanı oluştur">
+          </form>
+        </div>
         <h2>Haydi Gidelim!</h2>
+
         <p>Haydi gidelum hayde hayde gidelum hayde hayde gidelum hayde.</p>
-        <p>Sefer renkli tasarım basit gezi blog yazarı blog yazarı tasarımı WordPress tasarımı, tasarım organize web sitesi teması.</p>
+        <p>Sefer renkli tasarım basit gezi blog yazarı blog yazarı tasarımı WordPress tasarımı, tasarım organize web
+          sitesi teması.</p>
       </div>
       <div class="img-content">
         <img src="http://localhost:9000/img/adventure.jpg" alt="Maceraya atılalım!">
@@ -46,31 +56,43 @@
       </div>
       <div class="text-content">
         <h2>Macera beklemez</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. </p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
       </div>
 
     </section>
     <section class="content-destination">
       <h2>Rotanızı Belirleyin</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
       <img src="http://localhost:9000/img/destination.jpg" alt="İkinci slide">
     </section>
     <section class="content-pick">
 
       <div class="destination">
         <h4>Güneş altında eğlence</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
         <div class="btn">Beni de Al!</div>
       </div>
       <div class="destination">
         <h4>Dağ Gezintisi</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
         <div class="btn">Beni de Al!</div>
       </div>
       <div class="destination">
         <h4>Ada Kaçamağı</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
         <div class="btn">Beni de Al!</div>
       </div>
     </section>
